Changing gallery to use same sized images. General tidy up.

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_discography-accordion.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_discography-accordion.scss
@@ -9,14 +9,17 @@
 	}
 	.press-details {
 		display: flex;
+		flex-wrap: nowrap;
 		.discoraphy_title, .more-info {
-			line-height: 75px !important;
+			// line-height: 75px !important;
+			line-height: 30px !important;
 			margin-left: $sitepadding;
 		}
 		.discography-image {
 			@include full-bg;
 			height: 75px;
 			width: 75px;
+			min-width: 75px;
 		}
 	}
 }
