Fixes for artists toggle.

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -202,6 +202,10 @@ img.circle-thumb {
 
     a {
       position: relative;
+
+      .artist-list & {
+        position: static;
+      }
     }
 }
 @include breakpoint(large down) {
