--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -18329,6 +18329,8 @@ img.circle-thumb {
     margin-right: 25px; }
   .side-bar-artist a {
     position: relative; }
+    .artist-list .side-bar-artist a {
+      position: static; }
 
 @media screen and (max-width: 74.9375em) {
   .side-bar-artist {
