--- a/wp-content/themes/askonasholt2016/assets/scss/components/_home-hero.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_home-hero.scss
@@ -1,4 +1,9 @@
-
+@keyframes rotateLogo {
+    0% { transform: rotate(360deg); }
+    25% { transform: rotate(360deg); }
+    50% { transform: rotate(360deg); }
+    100% { transform: rotate(720deg); }
+}
 
 //Loading delay screen
 body.page-template-home #loading-delay {
@@ -8,8 +13,52 @@ body.page-template-home #loading-delay {
     background: $brand-red !important;
     z-index: 100001;
     top: 0;
-    .ball-scale-ripple-multiple {
+
+    .logoAnimation,
+    .logoAnimationH,
+    .logoAnimationALeft,
+    .logoAnimationARight {
         @include center;
+    }
+    .logoAnimation {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);        
+        width: 75px;
+        height: 75px;
+        border: 2px solid white;
+        border-radius: 50px;
+    }
+    .logoAnimation > div {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        animation: rotateLogo 2s infinite;
+    }
+    .logoAnimation > div:first-child {
+        animation: rotateLogo 1.5s infinite;
+    }
+    .logoAnimationH {
+		display: inline-block;    	
+		width: 22.5px;
+		height: 71.25px;
+		border-left: 2px solid #fff;
+		border-right: 2.5px solid #fff;
+    }
+    .logoAnimationALeft {
+		display: inline-block;
+		width: 19.5px;
+		height: 71.25px;
+		border-left: 2px solid #fff;
+		transform: translate(-50%, -50%) rotate(30deg);
+    }
+    .logoAnimationARight {
+		display: inline-block;    	
+    	width: 0px;
+    	height: 72px;
+    	border-right: 2px solid #fff;
+    	transform: translate(-50%, -50%) rotate(90deg);
     }
 }
 
