--- a/wp-content/themes/askonasholt2016/assets/scss/components/_page-nav-tiles.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_page-nav-tiles.scss
@@ -33,10 +33,11 @@
 		    padding-left: 0;
 		    padding-right: 0;
 		    a {
+		    	display: inline-block;
 		    	color: #B49A81;
 		    	text-transform: uppercase;
 		    	letter-spacing: 1px;
-		    	width: 100%;
+		    	// width: 100%;
 		    	border: 1px solid #B49A81;
 		    	line-height: 1;
 		    	padding: 1em;
