Tweaks to tags (inline-block width auto).

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_page-nav-tiles.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_page-nav-tiles.scss
@@ -29,7 +29,7 @@
 		    background-color: #fefefe;
 		    color: #B49A81 !important;
 		    margin-bottom: $sitepadding;
-		    margin-top: $sitepadding;
+		    margin-top: 0;
 		    padding-left: 0;
 		    padding-right: 0;
 		    a {
