--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -17586,7 +17586,7 @@ path.crescent {
       background-color: #fefefe;
       color: #B49A81 !important;
       margin-bottom: 25px;
-      margin-top: 25px;
+      margin-top: 0;
       padding-left: 0;
       padding-right: 0; }
       .more-page-links ul.submenu.page-nav-buttons li.page_item a {
